File: recursion.c
Original provenience: Mälardalen benchmark suite, www.mrtc.....

2015-10-12:
- Remove comment on line 1
- Added generic TACLeBench header to line 1
- Renamed function fib to recursion_fib
- Added forward decleration of functions
- Added recursion_main, recursion_init, recursion_return function
- create input value for recursion_fib function
- Applied Code Style 
