@@ -51,7 +51,7 @@ int recursion_fib( int i )
 
 int recursion_return()
 {
-  return recursion_result;
+  return recursion_result - 89;
 }
 
 void recursion_main( void )
