@@ -35,9 +35,9 @@ unsigned long ndes_bit[33];
 ndes_immense ndes_inp, ndes_key, ndes_out;
 int ndes_newkey, ndes_isw;
 
-static ndes_immense ndes_icd;
-static char ndes_ipc1[57];
-static char ndes_ipc2[49];
+ndes_immense ndes_icd;
+char ndes_ipc1[57];
+char ndes_ipc2[49];
 
 
 #ifdef NDES_WORSTCASE
@@ -80,6 +80,9 @@ void ndes_init()
     ndes_ipc1[i] = ndes_ipc1_tmp[i];
   for ( i = 0; i < 49; i++ )
     ndes_ipc2[i] = ndes_ipc2_tmp[i];
+
+  ndes_icd.l = 0;
+  ndes_icd.r = 0;
 
   ndes_inp.l = KNOWN_VALUE * 35;
   ndes_inp.r = KNOWN_VALUE * 26;
@@ -139,7 +142,8 @@ void ndes_des( ndes_immense inp, ndes_immense key, int *newkey, int isw,
     _Pragma( "loopbound min 28 max 28" )
     for ( j = 28, k = 56; j >= 1; j--, k-- ) {
       ndes_icd.r = ( ndes_icd.r << 1 ) | ndes_getbit( key, ndes_ipc1[j], 32 );
-      ndes_icd.l = ( ndes_icd.l <<= 1 ) | ndes_getbit( key, ndes_ipc1[k], 32 );
+	  ndes_icd.l = ndes_icd.l << 1;
+      ndes_icd.l = ( ndes_icd.l ) | ndes_getbit( key, ndes_ipc1[k], 32 );
     }
 
     _Pragma( "loopbound min 16 max 16" )
@@ -154,8 +158,10 @@ void ndes_des( ndes_immense inp, ndes_immense key, int *newkey, int isw,
 
   _Pragma( "loopbound min 32 max 32" )
   for ( j = 32, k = 64; j >= 1; j--, k-- ) {
-    itmp.r = ( itmp.r <<= 1 ) | ndes_getbit( inp, ip[j], 32 );
-    itmp.l = ( itmp.l <<= 1 ) | ndes_getbit( inp, ip[k], 32 );
+	itmp.r = itmp.r << 1;
+    itmp.r = ( itmp.r ) | ndes_getbit( inp, ip[j], 32 );
+	itmp.l = itmp.l << 1;
+    itmp.l = ( itmp.l ) | ndes_getbit( inp, ip[k], 32 );
   }
   _Pragma( "loopbound min 16 max 16" )
   for ( i = 1; i <= 16; i++ ) {
@@ -173,57 +179,89 @@ void ndes_des( ndes_immense inp, ndes_immense key, int *newkey, int isw,
 
   _Pragma( "loopbound min 32 max 32" )
   for ( j = 32, k = 64; j >= 1; j--, k-- ) {
-    ( *out ).r = ( ( *out ).r <<= 1 ) | ndes_getbit( itmp, ipm[j], 32 );
-    ( *out ).l = ( ( *out ).l <<= 1 ) | ndes_getbit( itmp, ipm[k], 32 );
+	( *out ).r = ( *out ).r << 1;
+    ( *out ).r = ( ( *out ).r ) | ndes_getbit( itmp, ipm[j], 32 );
+	( *out ).l = ( *out ).l << 1;
+    ( *out ).l = ( ( *out ).l ) | ndes_getbit( itmp, ipm[k], 32 );
   }
 }
 
 
 void ndes_cyfun( unsigned long ir, ndes_great k, unsigned long *iout )
 {
-  static char iet[49] = {0, 32, 1, 2, 3, 4, 5, 4, 5, 6, 7, 8, 9, 8, 9,
+  static long iet[49] = {0, 32, 1, 2, 3, 4, 5, 4, 5, 6, 7, 8, 9, 8, 9,
                          10, 11, 12, 13, 12, 13, 14, 15, 16, 17, 16, 17, 18, 19,
                          20, 21, 20, 21, 22, 23, 24, 25, 24, 25, 26, 27, 28, 29,
                          28, 29, 30, 31, 32, 1
                         };
-  static char ipp[33] = {0, 16, 7, 20, 21, 29, 12, 28, 17, 1, 15,
+  static long ipp[33] = {0, 16, 7, 20, 21, 29, 12, 28, 17, 1, 15,
                          23, 26, 5, 18, 31, 10, 2, 8, 24, 14, 32, 27, 3, 9, 19, 13,
                          30, 6, 22, 11, 4, 25
                         };
-  static char is[16][4][9] = {
-    0, 14, 15, 10, 7, 2, 12, 4, 13, 0, 0, 3, 13, 13, 14, 10, 13, 1,
-    0, 4, 0, 13, 10, 4, 9, 1, 7, 0, 15, 13, 1, 3, 11, 4, 6, 2,
-    0, 4, 1, 0, 13, 12, 1, 11, 2, 0, 15, 13, 7, 8, 11, 15, 0, 15,
-    0, 1, 14, 6, 6, 2, 14, 4, 11, 0, 12, 8, 10, 15, 8, 3, 11, 1,
-    0, 13, 8, 9, 14, 4, 10, 2, 8, 0, 7, 4, 0, 11, 2, 4, 11, 13,
-    0, 14, 7, 4, 9, 1, 15, 11, 4, 0, 8, 10, 13, 0, 12, 2, 13, 14,
-    0, 1, 14, 14, 3, 1, 15, 14, 4, 0, 4, 7, 9, 5, 12, 2, 7, 8,
-    0, 8, 11, 9, 0, 11, 5, 13, 1, 0, 2, 1, 0, 6, 7, 12, 8, 7,
-    0, 2, 6, 6, 0, 7, 9, 15, 6, 0, 14, 15, 3, 6, 4, 7, 4, 10,
-    0, 13, 10, 8, 12, 10, 2, 12, 9, 0, 4, 3, 6, 10, 1, 9, 1, 4,
-    0, 15, 11, 3, 6, 10, 2, 0, 15, 0, 2, 2, 4, 15, 7, 12, 9, 3,
-    0, 6, 4, 15, 11, 13, 8, 3, 12, 0, 9, 15, 9, 1, 14, 5, 4, 10,
-    0, 11, 3, 15, 9, 11, 6, 8, 11, 0, 13, 8, 6, 0, 13, 9, 1, 7,
-    0, 2, 13, 3, 7, 7, 12, 7, 14, 0, 1, 4, 8, 13, 2, 15, 10, 8,
-    0, 8, 4, 5, 10, 6, 8, 13, 1, 0, 1, 14, 10, 3, 1, 5, 10, 4,
-    0, 11, 1, 0, 13, 8, 3, 14, 2, 0, 7, 2, 7, 8, 13, 10, 7, 13,
-    0, 3, 9, 1, 1, 8, 0, 3, 10, 0, 10, 12, 2, 4, 5, 6, 14, 12,
-    0, 15, 5, 11, 15, 15, 7, 10, 0, 0, 5, 11, 4, 9, 6, 11, 9, 15,
-    0, 10, 7, 13, 2, 5, 13, 12, 9, 0, 6, 0, 8, 7, 0, 1, 3, 5,
-    0, 12, 8, 1, 1, 9, 0, 15, 6, 0, 11, 6, 15, 4, 15, 14, 5, 12,
-    0, 6, 2, 12, 8, 3, 3, 9, 3, 0, 12, 1, 5, 2, 15, 13, 5, 6,
-    0, 9, 12, 2, 3, 12, 4, 6, 10, 0, 3, 7, 14, 5, 0, 1, 0, 9,
-    0, 12, 13, 7, 5, 15, 4, 7, 14, 0, 11, 10, 14, 12, 10, 14, 12, 11,
-    0, 7, 6, 12, 14, 5, 10, 8, 13, 0, 14, 12, 3, 11, 9, 7, 15, 0,
-    0, 5, 12, 11, 11, 13, 14, 5, 5, 0, 9, 6, 12, 1, 3, 0, 2, 0,
-    0, 3, 9, 5, 5, 6, 1, 0, 15, 0, 10, 0, 11, 12, 10, 6, 14, 3,
-    0, 9, 0, 4, 12, 0, 7, 10, 0, 0, 5, 9, 11, 10, 9, 11, 15, 14,
-    0, 10, 3, 10, 2, 3, 13, 5, 3, 0, 0, 5, 5, 7, 4, 0, 2, 5,
-    0, 0, 5, 2, 4, 14, 5, 6, 12, 0, 3, 11, 15, 14, 8, 3, 8, 9,
-    0, 5, 2, 14, 8, 0, 11, 9, 5, 0, 6, 14, 2, 2, 5, 8, 3, 6,
-    0, 7, 10, 8, 15, 9, 11, 1, 7, 0, 8, 5, 1, 9, 6, 8, 6, 2,
-    0, 0, 15, 7, 4, 14, 6, 2, 8, 0, 13, 9, 12, 14, 3, 13, 12, 11
-  };
+  static long is[16][4][9] = {{{ 0 , 14 , 15 , 10 , 7 , 2 , 12 , 4 , 13 },
+	{ 0 , 0 , 3 , 13 , 13 , 14 , 10 , 13 , 1 },
+	{ 0 , 4 , 0 , 13 , 10 , 4 , 9 , 1 , 7 },
+	{ 0 , 15 , 13 , 1 , 3 , 11 , 4 , 6 , 2 }},
+	{{ 0 , 4 , 1 , 0 , 13 , 12 , 1 , 11 , 2 },
+	{ 0 , 15 , 13 , 7 , 8 , 11 , 15 , 0 , 15 },
+	{ 0 , 1 , 14 , 6 , 6 , 2 , 14 , 4 , 11 },
+	{ 0 , 12 , 8 , 10 , 15 , 8 , 3 , 11 , 1 }},
+	{{ 0 , 13 , 8 , 9 , 14 , 4 , 10 , 2 , 8 },
+	{ 0 , 7 , 4 , 0 , 11 , 2 , 4 , 11 , 13 },
+	{ 0 , 14 , 7 , 4 , 9 , 1 , 15 , 11 , 4 },
+	{ 0 , 8 , 10 , 13 , 0 , 12 , 2 , 13 , 14 }},
+	{{ 0 , 1 , 14 , 14 , 3 , 1 , 15 , 14 , 4 },
+	{ 0 , 4 , 7 , 9 , 5 , 12 , 2 , 7 , 8 },
+	{ 0 , 8 , 11 , 9 , 0 , 11 , 5 , 13 , 1 },
+	{ 0 , 2 , 1 , 0 , 6 , 7 , 12 , 8 , 7 }},
+	{{ 0 , 2 , 6 , 6 , 0 , 7 , 9 , 15 , 6 },
+	{ 0 , 14 , 15 , 3 , 6 , 4 , 7 , 4 , 10 },
+	{ 0 , 13 , 10 , 8 , 12 , 10 , 2 , 12 , 9 },
+	{ 0 , 4 , 3 , 6 , 10 , 1 , 9 , 1 , 4 }},
+	{{ 0 , 15 , 11 , 3 , 6 , 10 , 2 , 0 , 15 },
+	{ 0 , 2 , 2 , 4 , 15 , 7 , 12 , 9 , 3 },
+	{ 0 , 6 , 4 , 15 , 11 , 13 , 8 , 3 , 12 },
+	{ 0 , 9 , 15 , 9 , 1 , 14 , 5 , 4 , 10 }},
+	{{ 0 , 11 , 3 , 15 , 9 , 11 , 6 , 8 , 11 },
+	{ 0 , 13 , 8 , 6 , 0 , 13 , 9 , 1 , 7 },
+	{ 0 , 2 , 13 , 3 , 7 , 7 , 12 , 7 , 14 },
+	{ 0 , 1 , 4 , 8 , 13 , 2 , 15 , 10 , 8 }},
+	{{ 0 , 8 , 4 , 5 , 10 , 6 , 8 , 13 , 1 },
+	{ 0 , 1 , 14 , 10 , 3 , 1 , 5 , 10 , 4 },
+	{ 0 , 11 , 1 , 0 , 13 , 8 , 3 , 14 , 2 },
+	{ 0 , 7 , 2 , 7 , 8 , 13 , 10 , 7 , 13 }},
+	{{ 0 , 3 , 9 , 1 , 1 , 8 , 0 , 3 , 10 },
+	{ 0 , 10 , 12 , 2 , 4 , 5 , 6 , 14 , 12 },
+	{ 0 , 15 , 5 , 11 , 15 , 15 , 7 , 10 , 0 },
+	{ 0 , 5 , 11 , 4 , 9 , 6 , 11 , 9 , 15 }},
+	{{ 0 , 10 , 7 , 13 , 2 , 5 , 13 , 12 , 9 },
+	{ 0 , 6 , 0 , 8 , 7 , 0 , 1 , 3 , 5 },
+	{ 0 , 12 , 8 , 1 , 1 , 9 , 0 , 15 , 6 },
+	{ 0 , 11 , 6 , 15 , 4 , 15 , 14 , 5 , 12 }},
+	{{ 0 , 6 , 2 , 12 , 8 , 3 , 3 , 9 , 3 },
+	{ 0 , 12 , 1 , 5 , 2 , 15 , 13 , 5 , 6 },
+	{ 0 , 9 , 12 , 2 , 3 , 12 , 4 , 6 , 10 },
+	{ 0 , 3 , 7 , 14 , 5 , 0 , 1 , 0 , 9 }},
+	{{ 0 , 12 , 13 , 7 , 5 , 15 , 4 , 7 , 14 },
+	{ 0 , 11 , 10 , 14 , 12 , 10 , 14 , 12 , 11 },
+	{ 0 , 7 , 6 , 12 , 14 , 5 , 10 , 8 , 13 },
+	{ 0 , 14 , 12 , 3 , 11 , 9 , 7 , 15 , 0 }},
+	{{ 0 , 5 , 12 , 11 , 11 , 13 , 14 , 5 , 5 },
+	{ 0 , 9 , 6 , 12 , 1 , 3 , 0 , 2 , 0 },
+	{ 0 , 3 , 9 , 5 , 5 , 6 , 1 , 0 , 15 },
+	{ 0 , 10 , 0 , 11 , 12 , 10 , 6 , 14 , 3 }},
+	{{ 0 , 9 , 0 , 4 , 12 , 0 , 7 , 10 , 0 },
+	{ 0 , 5 , 9 , 11 , 10 , 9 , 11 , 15 , 14 },
+	{ 0 , 10 , 3 , 10 , 2 , 3 , 13 , 5 , 3 },
+	{ 0 , 0 , 5 , 5 , 7 , 4 , 0 , 2 , 5 }},
+	{{ 0 , 0 , 5 , 2 , 4 , 14 , 5 , 6 , 12 },
+	{ 0 , 3 , 11 , 15 , 14 , 8 , 3 , 8 , 9 },
+	{ 0 , 5 , 2 , 14 , 8 , 0 , 11 , 9 , 5 },
+	{ 0 , 6 , 14 , 2 , 2 , 5 , 8 , 3 , 6 }},
+	{{ 0 , 7 , 10 , 8 , 15 , 9 , 11 , 1 , 7 },
+	{ 0 , 8 , 5 , 1 , 9 , 6 , 8 , 6 , 2 },
+	{ 0 , 0 , 15 , 7 , 4 , 14 , 6 , 2 , 8 },
+	{ 0 , 13 , 9 , 12 , 14 , 3 , 13 , 12 , 11 }}};
 
   static char ibin[16] = {0, 8, 4, 12, 2, 10, 6, 14, 1, 9, 5, 13, 3, 11, 7, 15};
   ndes_great ie;
@@ -272,7 +310,10 @@ void ndes_cyfun( unsigned long ir, ndes_great k, unsigned long *iout )
 
   _Pragma( "loopbound min 32 max 32" )
   for ( j = 32; j >= 1; j-- )
-    *iout = ( *iout <<= 1 ) | ( p[ipp[j]] & itmp ? 1 : 0 );
+  {
+	*iout = ( *iout << 1 );
+    *iout |= ( p[ipp[j]] & itmp ? 1 : 0 );
+  }
 }
 
 unsigned long ndes_getbit( ndes_immense source, int bitno, int nbits )
@@ -302,18 +343,21 @@ void ndes_ks( /*ndes_immense key, */int n, ndes_great *kn )
 
   _Pragma( "loopbound min 16 max 16" )
   for ( j = 16, k = 32, l = 48; j >= 1; j--, k--, l-- ) {
-    ( *kn ).r = ( ( *kn ).r <<= 1 ) | ( unsigned short )
+	( *kn ).r = ( *kn ).r << 1;
+    ( *kn ).r = ( ( *kn ).r ) | ( unsigned short )
                 ndes_getbit( ndes_icd, ndes_ipc2[j], 28 );
-    ( *kn ).c = ( ( *kn ).c <<= 1 ) | ( unsigned short )
+	( *kn ).c = ( *kn ).c << 1;
+    ( *kn ).c = ( ( *kn ).c ) | ( unsigned short )
                 ndes_getbit( ndes_icd, ndes_ipc2[k], 28 );
-    ( *kn ).l = ( ( *kn ).l <<= 1 ) | ( unsigned short )
+	( *kn ).l = ( *kn ).l << 1;
+    ( *kn ).l = ( ( *kn ).l ) | ( unsigned short )
                 ndes_getbit( ndes_icd, ndes_ipc2[l], 28 );
   }
 }
 
 int ndes_return()
 {
-  return 0;
+  return ndes_icd.r+ndes_icd.l-2048-8388608;
 }
 
 void ndes_main()
